# test-service

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
service/: admin.py  models.py
service/api/: serializers.py  urls.py  viewsets.py
service/migrations/: 0001_initial.py
service/tests/: test_api.py  test_models.py  test_querysets.py
